agrego los nombres de los servicios que ofrecemos

--- a/index.html
+++ b/index.html
@@ -42,16 +42,19 @@
     <section class="containerOffer">
         <div>
             <img src="https://res.cloudinary.com/anonimous/image/upload/v1660777742/proyecto%20GRAPHEL/logo_html_ujqypr.png" alt="Este es el logo de html"> <br>
+            <b>html5</b>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis exercitationem et consectetur saepe
             quisquam nobis id ipsa asperiores.
         </div>
         <div>
             <img src="https://res.cloudinary.com/anonimous/image/upload/v1660777668/proyecto%20GRAPHEL/logo_css_pdbkxd.png" alt="Este es el logo de css"> <br>
+            <b>css</b>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis exercitationem et consectetur saepe
             quisquam nobis id ipsa asperiores.
         </div>
         <div>
             <img src="https://res.cloudinary.com/anonimous/image/upload/v1660777647/proyecto%20GRAPHEL/logo_brush_yylowg.png" alt="Este es el logo de brush"> <br>
+            <b>diseño grafico</b>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis exercitationem et consectetur saepe
             quisquam nobis id ipsa asperiores.
         </div>
